[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Titillium-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://level/rockpillarexportcolour.obj" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]

size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

size = 24
font_data = ExtResource( 2 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
main_scene = "res://Main.tscn"

[node name="Main_Page" type="Panel" parent="."]
margin_left = 345.0
margin_top = 34.0
margin_right = 719.0
margin_bottom = 550.0

[node name="Label" type="Label" parent="Main_Page"]
margin_left = -26.4323
margin_top = 25.2247
margin_right = 403.568
margin_bottom = 119.225
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Test Main Menu"
align = 1
valign = 1

[node name="Start_Button" type="Button" parent="Main_Page"]
margin_left = 83.4681
margin_top = 191.9
margin_right = 287.468
margin_bottom = 221.9
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="Quit_Button" type="Button" parent="Main_Page"]
margin_left = 83.468
margin_top = 337.316
margin_right = 287.468
margin_bottom = 367.316
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Spatial" type="Spatial" parent="."]

[node name="Scene Root" parent="Spatial" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.36866, -0.842336, -2.16857 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 0.999192, -0.0215339, 0.0339305, 0.0198595, 0.998604, 0.0489352, -0.0349369, -0.0482218, 0.998226, -1.02578, 2.04781, 6.57726 )

